--- a/api/package.json
+++ b/api/package.json
@@ -2,9 +2,9 @@
   "name": "api",
   "version": "1.0.0",
   "description": "",
-  "main": "app/index.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node app/index.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "run app": "./node_modules/.bin/nodemon app"
   },
@@ -13,7 +13,14 @@
   "dependencies": {
     "babel-core": "^6.26.3",
     "babel-preset-es2015": "^6.24.1",
-    "express": "^4.17.1"
+    "babel-register": "^6.26.0",
+    "express": "^4.17.1",
+    "lodash": "^4.17.15",
+    "mongodb": "3.5.7",
+    "mongoose": "^5.9.13",
+    "mongoose-unique-validator": "^2.0.3",
+    "morgan": "^1.10.0",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
