--- a/package.json
+++ b/package.json
@@ -19,11 +19,15 @@
     "@angular/platform-browser": "~8.2.12",
     "@angular/platform-browser-dynamic": "~8.2.12",
     "@angular/router": "~8.2.12",
+    "angular2-jwt": "^0.2.3",
     "awesome": "0.0.7",
     "bootstrap": "^4.4.1",
     "font": "0.0.4",
     "font-awesome": "^4.7.0",
+    "jsonwebtoken": "^8.5.1",
+    "moment": "^2.25.3",
     "rxjs": "~6.4.0",
+    "sha1": "^1.1.1",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
