--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blog",
+  "name": "package",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -33,14 +33,14 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.15",
-    "@angular/cli": "~8.3.15",
+    "@angular-devkit/build-angular": "^0.803.26",
+    "@angular/cli": "^8.3.25",
     "@angular/compiler-cli": "~8.2.12",
     "@angular/language-service": "~8.2.12",
     "@babel/compat-data": "7.9.0",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -50,10 +50,22 @@
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
     "protractor": "~5.4.0",
+    "rxjs": "~6.2.0",
+    "rxjs-compat": "~6.3.3",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.5.3",
-    "rxjs": "~6.2.0",
-    "rxjs-compat": "~6.3.3"
-  }
+    "typescript": "~3.5.3"
+  },
+  "description": "",
+  "main": "karma.conf.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/troyan12312/TAI_Lab_5.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/troyan12312/TAI_Lab_5/issues"
+  },
+  "homepage": "https://github.com/troyan12312/TAI_Lab_5#readme"
 }
